refactor: read/write service 분리에 따른 수정 사항 반영
- ReadService는 DTO를 매핑해서 반환하도록 수정
- WriterService는 Entity를 그대로 반환하도록 수정